# NERD-HPC

./: .gitignore  .gitmodules  README.md
hardware/: LocalSymbolLibrary.kicad_sym
hardware/LocalFootprintLibrary.pretty/: 3386K-EY5-101TR.kicad_mod  AQM1248A.kicad_mod  CUS01.kicad_mod  IS-1245T-G.kicad_mod  OSRB38C9AA.kicad_mod  RV100F-30-6K3B-B10K-B301.kicad_mod  RV121SF-20-02J-A1K-00K11.kicad_mod  SS-12D00-G5.kicad_mod  UM1515IA085008.kicad_mod
hardware/NERD-HPC/: NERD-HPC.kicad_pcb  NERD-HPC.kicad_prl  NERD-HPC.kicad_pro  NERD-HPC.kicad_sch  fp-lib-table  sym-lib-table
hardware/NERD-HPC/garb/: NERD-HPC-B_Cu.gbl  NERD-HPC-B_Mask.gbs  NERD-HPC-B_Paste.gbp  NERD-HPC-B_Silkscreen.gbo  NERD-HPC-Edge_Cuts.gm1  NERD-HPC-F_Cu.gtl  NERD-HPC-F_Mask.gts  NERD-HPC-F_Paste.gtp  NERD-HPC-F_Silkscreen.gto  NERD-HPC-In1_Cu.g2  NERD-HPC-In2_Cu.g3  NERD-HPC-NPTH-drl_map.gbr  NERD-HPC-NPTH.drl  NERD-HPC-PTH-drl_map.gbr  NERD-HPC-PTH.drl
hardware/NERD-HPC_CASE_B/: NERD-HPC_CASE_B.kicad_pcb  NERD-HPC_CASE_B.kicad_prl  NERD-HPC_CASE_B.kicad_pro
hardware/NERD-HPC_CASE_B/garb/: NERD-HPC_CASE_B-B_Cu.gbl  NERD-HPC_CASE_B-B_Mask.gbs  NERD-HPC_CASE_B-B_Paste.gbp  NERD-HPC_CASE_B-B_Silkscreen.gbo  NERD-HPC_CASE_B-Edge_Cuts.gm1  NERD-HPC_CASE_B-F_Cu.gtl  NERD-HPC_CASE_B-F_Mask.gts  NERD-HPC_CASE_B-F_Paste.gtp  NERD-HPC_CASE_B-F_Silkscreen.gto  NERD-HPC_CASE_B-NPTH-drl_map.gbr  NERD-HPC_CASE_B-NPTH.drl  NERD-HPC_CASE_B-PTH-drl_map.gbr  NERD-HPC_CASE_B-PTH.drl
hardware/NERD-HPC_CASE_F/: NERD-HPC_CASE_F.kicad_pcb  NERD-HPC_CASE_F.kicad_prl  NERD-HPC_CASE_F.kicad_pro  NERD-HPC_CASE_F.kicad_sch
hardware/NERD-HPC_CASE_F/garb/: NERD-HPC_CASE_F-B_Cu.gbl  NERD-HPC_CASE_F-B_Mask.gbs  NERD-HPC_CASE_F-B_Paste.gbp  NERD-HPC_CASE_F-B_Silkscreen.gbo  NERD-HPC_CASE_F-Edge_Cuts.gm1  NERD-HPC_CASE_F-F_Cu.gtl  NERD-HPC_CASE_F-F_Mask.gts  NERD-HPC_CASE_F-F_Paste.gtp  NERD-HPC_CASE_F-F_Silkscreen.gto  NERD-HPC_CASE_F-NPTH-drl_map.gbr  NERD-HPC_CASE_F-NPTH.drl  NERD-HPC_CASE_F-PTH-drl_map.gbr  NERD-HPC_CASE_F-PTH.drl
hardware/plots/: NERD-HPC__BOM.csv
software/: CMakeLists.txt
software/_build/src/: NERD_HPC.uf2
software/src/: CMakeLists.txt  basic.cpp  basic.hpp  com_func.c  com_func.h  draw.c  draw.h  font.c  font.h  io.c  io.h  ioexp.c  ioexp.h  ir.c  ir.h  lcd.c  lcd.h  main.c  mcore.c  mcore.h  msc_disk.c  pin.c  pin.h  sd.cpp  sd.hpp  speaker.c  speaker.h  usb.c  usb.h  usb_descriptors.c
